# pyDGSA

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini  tutorial_detailed.ipynb  tutorial_short.ipynb
docs/: conf.py  index.rst  requirements.txt  tutorials.rst
docs/notebooks/: DetailedTutorial.ipynb  ShortTutorial.ipynb
pyDGSA/: cluster.py  dgsa.py  interact_util.py  plot.py
sample_data/: analytic_params.npy
tests/: test_cluster.py  test_dgsa.py
