[tool.poetry]
name = "pyDGSA"
version = "1.0.7"
description = "Python implementation of distance-based generalized sensitivity analysis (DGSA)"
authors = ["zperzan <zach.perzan@unlv.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "pyDGSA"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
ipywidgets = "^8.1.3"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
tox-pyenv-redux = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
