[tool.poetry]
name = "pyDGSA"
version = "1.0.8"
description = "Python implementation of distance-based generalized sensitivity analysis (DGSA)"
authors = ["zperzan <zach.perzan@unlv.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "pyDGSA"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
ipywidgets = "^8.1.3"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
tox-pyenv-redux = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.6"

[tool.ruff]
line-length = 120
indent-width = 4

exclude = [
    ".idea",
    ".ipynb_checkpoints",
    ".git",
    ".tox",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    "build",
    "dist",
    "tests",
    "sandbox.ipynb"
]

# Target version
target-version = "py310"

[tool.ruff.lint]

select = [
    "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
     "I",  # isort
     "N",  # PEP8 naming convetions
     "D"  # pydocstyle
]

# Ignore a few rules
ignore = [
    "N999", # Ignore incorrect module name (lowercase)
    "D205", # Ignore 1 blank line required between summary line and description
    "D400", # Ignore first docstring line should end with a period
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring errors in tests
"__init__.py" = ["D"]  # Ignore docstring errors in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Indent with spaces rather than tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
