[project]
name = "pyDGSA"
version = "1.1.1"
description = "Python implementation of distance-based generalized sensitivity analysis (DGSA)"
authors = [{ name = "Zach Perzan", email = "zach.perzan@unlv.edu" }]
requires-python = ">=3.10, <4.0"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.0,<3",
    "matplotlib>=3.9.0,<4",
    "pandas>=2.2.2,<3",
    "tqdm>=4.66.4,<5",
    "scikit-learn>=1.5.1,<2",
    "scipy>=1.14.0,<2",
    "ipywidgets>=8.1.3,<9",
    "pytest>=8.3.4,<9",
    "notebook>=7.5.0,<8",
]

[dependency-groups]
dev = ["jupyter>=1.0.0,<2"]
test = ["pytest>=8.2.2,<9"]
lint = ["ruff>=0.9.6,<0.10"]

[tool.uv]
default-groups = [
    "dev",
    "lint",
]

[tool.uv.build-backend]
module-name = ["pyDGSA"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
indent-width = 4

exclude = [
    ".idea",
    ".ipynb_checkpoints",
    ".git",
    ".tox",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    "build",
    "dist",
    "tests",
    "sandbox.ipynb"
]

# Target version
target-version = "py310"

[tool.ruff.lint]

select = [
    "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
     "I",  # isort
     "N",  # PEP8 naming convetions
     "D"  # pydocstyle
]

# Ignore a few rules
ignore = [
    "N999", # Ignore incorrect module name (lowercase)
    "D205", # Ignore 1 blank line required between summary line and description
    "D400", # Ignore first docstring line should end with a period
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring errors in tests
"docs/*" = ["D"]  # Ignore docstring errors in docs
"__init__.py" = ["D"]  # Ignore docstring errors in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Indent with spaces rather than tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
